test/basic/good/while_vs_do_while.lat
int main() {
    while(false) {
        printString("BAD");
    }
    return 1;
}