test/basic/bad/bad056.lat
class janusz extends andrzej {
  int barbara;
}

class andrzej extends janusz {
  int krzysztof;
}

int main() {
  return 1;
}
